Eliminacion ruta imagenes  index.html
Eliminacion de ruta "imagenes", ya que esta no es usada, ya que todo esta en el repositorio

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             display: flex;
             flex-direction: column;
             height: 100vh; 
-            background-image: url('imagenes/fondo.jpg'); /* Ruta relativa para fondo */
+            background-image: url('fondo.jpg'); /* Ruta relativa para fondo */
             background-size: cover; 
             background-repeat: no-repeat; 
             background-position: center; 
@@ -96,7 +96,7 @@
     <div class="container">
         <a href="proveedores.html">
             <div class="section">
-                <img src="imagenes/proveedor.jpg" alt="Registro de Proveedores"> <!-- Ruta relativa para la imagen -->
+                <img src="proveedor.jpg" alt="Registro de Proveedores"> <!-- Ruta relativa para la imagen -->
                 <div>
                     <h2>Registro de Proveedores</h2>
                     <p>Agrega y gestiona a tus proveedores con facilidad, manteniendo un registro detallado de sus datos y productos que suministran.</p>
@@ -106,7 +106,7 @@
 
         <a href="clientes.html">
             <div class="section">
-                <img src="imagenes/cliente.jpg" alt="Registro de Clientes"> <!-- Ruta relativa para la imagen -->
+                <img src="cliente.jpg" alt="Registro de Clientes"> <!-- Ruta relativa para la imagen -->
                 <div>
                     <h2>Registro de Clientes</h2>
                     <p>Administra los clientes que compran fiado, con opciones para autorizar pagos y controlar su deuda.</p>
@@ -116,7 +116,7 @@
 
         <a href="ventas.html">
             <div class="section">
-                <img src="imagenes/abono.jpg" alt="Registro de Ventas"> <!-- Ruta relativa para la imagen -->
+                <img src="abono.jpg" alt="Registro de Ventas"> <!-- Ruta relativa para la imagen -->
                 <div>
                     <h2>Registro de Ventas</h2>
                     <p>Registra las ventas realizadas de manera fácil, generando boletas y actualizando el inventario en tiempo real.</p>
