--- a/clientes.html
+++ b/clientes.html
@@ -26,7 +26,7 @@
     <h1>Registro de Clientes</h1>
     <div class="content">
         <p>Esta página está destinada a gestionar la información de los clientes. Aquí podrás añadir y editar sus datos.</p>
-        <p><a href="kokogest.html">Volver a la página principal</a></p>
+        <p><a href="index.html">Volver a la página principal</a></p>
     </div>
 
 </body>
