--- a/proveedores.html
+++ b/proveedores.html
@@ -26,7 +26,7 @@
     <h1>Registro de Proveedores</h1>
     <div class="content">
         <p>Esta es la página donde se gestionan los proveedores. Aquí podrás añadir, editar o eliminar proveedores según sea necesario.</p>
-        <p><a href="kokogest.html">Volver a la página principal</a></p>
+        <p><a href="index.html">Volver a la página principal</a></p>
     </div>
 
 </body>
