--- a/ventas.html
+++ b/ventas.html
@@ -26,7 +26,7 @@
     <h1>Registro de Ventas</h1>
     <div class="content">
         <p>Aquí puedes registrar y gestionar las ventas realizadas. Se actualizará el inventario automáticamente.</p>
-        <p><a href="kokogest.html">Volver a la página principal</a></p>
+        <p><a href="index.html">Volver a la página principal</a></p>
     </div>
 
 </body>
