--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <body>
 
     <h1>Bienvenido a Kokogest</h1>
-    <p>Bienvenido a Kokogest, la solución integral para la gestión de tu almacén. Con nuestro sistema, podrás gestionar de manera eficiente tu inventario, controlar las ventas realizadas a través de boletas, y llevar un registro detallado de los pagos de productos fiados. Además, Kokogest se encarga de mantener actualizado el stock en tiempo real, lo que te permitirá tomar decisiones informadas. Ya sea que necesites registrar proveedores, clientes o ventas, nuestra plataforma te ofrece herramientas sencillas y potentes para optimizar la operación de tu negocio.</p>
+    <p>Bienvenido a Kokogest, la solución integral para la gestión de tu almacén. Con nuestro sistema, podrás gestionar de manera eficiente tu inventario. Kokogest se encarga de mantener actualizado el stock en tiempo real, lo que te permitirá tomar decisiones informadas. Ya sea que necesites registrar proveedores, clientes, nuestra plataforma te ofrece herramientas sencillas y potentes para optimizar la operación de tu negocio.</p>
     
     <div class="container">
         <a href="proveedores.html">
@@ -114,9 +114,9 @@
             </div>
         </a>
 
-        <a href="ventas.html">
+        <a href="roles.html">
             <div class="section">
-                <img src="abono.jpg" alt="Registro de Ventas"> <!-- Ruta relativa para la imagen -->
+                <img src="rol.jpg" alt="Administrar Roles"> <!-- Ruta relativa para la imagen -->
                 <div>
                     <h2>Registro de Ventas</h2>
                     <p>Registra las ventas realizadas de manera fácil, generando boletas y actualizando el inventario en tiempo real.</p>
