Update and rename ventas.html to roles.html
Se actualizaron los nombres y la descripcion, en relacion a admistrar los roles

--- a/roles.html
+++ b/roles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de Ventas</title>
+    <title>Administrar roles</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,9 +23,9 @@
 </head>
 <body>
 
-    <h1>Registro de Ventas</h1>
+    <h1>Administrar roles</h1>
     <div class="content">
-        <p>Aquí puedes registrar y gestionar las ventas realizadas. Se actualizará el inventario automáticamente.</p>
+        <p>En esta seccion, se podrá gestionar los roles de los usuarios, dandole diferentes tipos de permisos y accesos.</p>
         <p><a href="index.html">Volver a la página principal</a></p>
     </div>
 
