--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="section">
                 <img src="rol.jpg" alt="Administrar Roles"> <!-- Ruta relativa para la imagen -->
                 <div>
-                    <h2>Registro de Ventas</h2>
+                    <h2>Administrar roles</h2>
                     <p>Registra las ventas realizadas de manera fácil, generando boletas y actualizando el inventario en tiempo real.</p>
                 </div>
             </div>
