--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <img src="rol.jpg" alt="Administrar Roles"> <!-- Ruta relativa para la imagen -->
                 <div>
                     <h2>Administrar roles</h2>
-                    <p>Registra las ventas realizadas de manera fácil, generando boletas y actualizando el inventario en tiempo real.</p>
+                    <p>En esta seccion podrá administrar los distintos tipos de permisos.</p>
                 </div>
             </div>
         </a>
