--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <img src="rol.jpg" alt="Administrar Roles"> <!-- Ruta relativa para la imagen -->
                 <div>
                     <h2>Administrar roles</h2>
-                    <p>En esta seccion podrá administrar los distintos tipos de permisos (Solo podrá entrar el administrador) .</p>
+                    <p>En esta sección podrá administrar los distintos tipos de permisos (solo podrá entrar el administrador).</p>
                 </div>
             </div>
         </a>
