--- a/proveedores.html
+++ b/proveedores.html
@@ -19,6 +19,21 @@
             text-align: center;
             padding: 20px;
         }
+        .btn {
+            display: inline-block;
+            margin: 10px;
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        .btn:hover {
+            background-color: #555;
+        }
     </style>
 </head>
 <body>
@@ -26,8 +41,16 @@
     <h1>Registro de Proveedores</h1>
     <div class="content">
         <p>Esta es la página donde se gestionan los proveedores. Aquí podrás añadir, editar o eliminar proveedores según sea necesario.</p>
+
+        <!-- Opciones de gestión de proveedores -->
+        <a href="agregar_proveedor.html" class="btn">Agregar Nuevo Proveedor</a>
+        <a href="editar_proveedor.html" class="btn">Editar Proveedor</a>
+        <a href="eliminar_proveedor.html" class="btn">Eliminar Proveedor</a>
+        <a href="ver_detalles_proveedor.html" class="btn">Ver Detalles del Proveedor</a>
+
         <p><a href="index.html">Volver a la página principal</a></p>
     </div>
 
 </body>
 </html>
+
