--- a/proveedores.html
+++ b/proveedores.html
@@ -10,6 +10,10 @@
             background-color: #f4f4f4;
             margin: 0;
             padding: 20px;
+            background-image: url('infoProveedor.jpg'); /* Ruta relativa para fondo */
+            background-size: cover; 
+            background-repeat: no-repeat; 
+            background-position: center; 
         }
         h1 {
             color: #333;
