--- a/proveedores.html
+++ b/proveedores.html
@@ -8,12 +8,11 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
+            background-image: url('infoProveedor.jpg'); /* Ruta de la imagen */
+            background-size: cover; /* Hace que la imagen cubra toda la pantalla */
+            background-position: center; /* Centra la imagen */
             margin: 0;
             padding: 20px;
-            background-image: url('infoProveedor.jpg'); /* Ruta relativa para fondo */
-            background-size: cover; 
-            background-repeat: no-repeat; 
-            background-position: center; 
         }
         h1 {
             color: #333;
