--- a/proveedores.html
+++ b/proveedores.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             background-image: url('infoProveedor.jpg'); /* Ruta de la imagen */
-            background-size: cover; /* Hace que la imagen cubra toda la pantalla */
+            background-size: 70% 70%; /* Hace que la imagen cubra toda la pantalla */
             background-position: center; /* Centra la imagen */
             margin: 0;
             padding: 20px;
