--- a/proveedores.html
+++ b/proveedores.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #800080;
             background-image: url('infoProveedor.jpg'); /* Ruta de la imagen */
             background-size: 70% 70%; /* Hace que la imagen cubra toda la pantalla */
             background-position: center; /* Centra la imagen */
