--- a/proveedores.html
+++ b/proveedores.html
@@ -15,7 +15,7 @@
             padding: 20px;
         }
         h1 {
-            color: #9b59b6;
+            color: #333;
             text-align: center;
         }
         .content {
