--- a/proveedores.html
+++ b/proveedores.html
@@ -16,8 +16,9 @@
             padding: 20px;
         }
         h1 {
-            color: #fff; /* Texto blanco para contraste */
+            color: #d50b0b;
             text-align: center;
+            margin-top: 20px;
         }
         .content {
             text-align: center;
