--- a/clientes.html
+++ b/clientes.html
@@ -26,6 +26,9 @@
     <h1>Registro de Clientes</h1>
     <div class="content">
         <p>Esta página está destinada a gestionar la información de los clientes. Aquí podrás añadir y editar sus datos.</p>
+        <div class="buttons">
+            <a href="#">Agregar nuevo proveedor</a>
+            <a href="#">Editar proveedor</a>
         <p><a href="index.html">Volver a la página principal</a></p>
     </div>
 
