--- a/clientes.html
+++ b/clientes.html
@@ -19,6 +19,21 @@
             text-align: center;
             padding: 20px;
         }
+        .btn {
+            background-color: #4CAF50; /* color verde */
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .btn:hover {
+            background-color: #45a049; /* cambio de color al pasar el ratón */
+        }
     </style>
 </head>
 <body>
@@ -26,11 +41,14 @@
     <h1>Registro de Clientes</h1>
     <div class="content">
         <p>Esta página está destinada a gestionar la información de los clientes. Aquí podrás añadir y editar sus datos.</p>
-        <div class="buttons">
-            <a href="#">Agregar nuevo proveedor</a>
-            <a href="#">Editar proveedor</a>
+        
+        <!-- Opciones de acción -->
+        <a href="agregar_cliente.html" class="btn">Agregar Cliente</a>
+        <a href="ver_clientes.html" class="btn">Ver Datos del Cliente</a>
+        
         <p><a href="index.html">Volver a la página principal</a></p>
     </div>
 
 </body>
 </html>
+
