--- a/clientes.html
+++ b/clientes.html
@@ -43,9 +43,8 @@
         <p>Esta página está destinada a gestionar la información de los clientes. Aquí podrás añadir y editar sus datos.</p>
         
         <!-- Opciones de acción -->
-        <a href="agregar_cliente.html" class="btn">Agregar Cliente</a>
-        <a href="ver_clientes.html" class="btn">Ver Datos del Cliente</a>
-        
+        <a href="#">Agregar cliente</a>
+        <a href="#">Ver datos</a>
         <p><a href="index.html">Volver a la página principal</a></p>
     </div>
 
